o Enable nosched module; o Init CCP as an OS timer; o Remove 3 seconds delay for a button. This has to be added again using   standard callout methods.

--- a/mdepx.conf
+++ b/mdepx.conf
@@ -22,7 +22,12 @@ mdepx {
 	arch {
 		modules mips;
 		mips {
-			modules mips;
+			objects mips/exception.o
+				mips/machdep.o
+				mips/saverestore.o
+				mips/io.o
+				mips/trap.o;
+
 			objects	microchip/pic32_adc.o
 				microchip/pic32_uart.o
 				microchip/pic32_port.o
@@ -46,6 +51,12 @@ mdepx {
 			systm
 			thread
 			callout;
+
+		callout {
+			options usec_to_ticks;
+		};
+
+		objects nosched/mdx_tsleep.o;
 
 		thread {
 			stack_size 1024;
