Move build flags to the config file.

--- a/mdepx.conf
+++ b/mdepx.conf
@@ -2,6 +2,18 @@ modules mdepx src;
 
 link ./ldscript obj/tweezers.elf;
 
+set-build-flags
+	-O -pipe -g -nostdinc -fno-pic -mno-abicalls -G0
+	-mmicromips -march=mips32r2 -EL -msoft-float -ffreestanding
+	-fwrapv	-gdwarf-2 -fno-common -fms-extensions
+	-finline-limit=8000 -std=iso9899:1999 -fno-builtin-printf
+	-Wall -Wredundant-decls -Wnested-externs
+	-Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith
+	-Winline -Wcast-qual -Wundef -Wno-pointer-sign
+	-Wmissing-include-dirs -fdiagnostics-show-option
+	-Wno-unknown-pragmas -Wno-uninitialized -Werror
+	-D__mips_o32;
+
 src {
 	append-search-path ../mdepx/arch
 			   ../mdepx/include
