Sort modules used.

--- a/mdepx.conf
+++ b/mdepx.conf
@@ -59,10 +59,10 @@ mdepx {
 	};
 
 	kernel {
-		modules cpu
+		modules callout
+			cpu
 			systm
-			thread
-			callout;
+			thread;
 
 		callout {
 			options usec_to_ticks;
